tests/badvar2.err
4: error: incompatible types. required boolean, found int
	boolean b = a;
	            ^
