tests/badvar2.juice
// assigning values of incompatible types

int a = 5;
boolean b = a;
